Fix: fixed overflowing of content on md screens;

--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -23,7 +23,8 @@ p {
 }
 
 .no-scroll {
+  width: 100%;
   height: 100%;
   overflow: hidden;
-  position: fixed;
+  position: relative;
 }
